--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 	<title>Tic-Tac-Toe!</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
+
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
